# AntennaSim-Mac-automatic-build-script

./: .dockerignore  CHANGELOG.md  README.md  bootstrap-fresh-antennasim-macos.sh
backend/: pyproject.toml
backend/src/converters/: nec_file.py
backend/src/models/: simulation.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/components/results/: CompareOverlay.tsx  ImpedanceChart.tsx  PatternPolar.tsx  SWRChart.tsx  SmithChart.tsx
frontend/src/components/ui/: SimulationLoadingOverlay.tsx
